fix: :bug: closing windows on mobile

--- a/src/Taskbar/components/WindowsHypr/WindowsHypr.module.scss
+++ b/src/Taskbar/components/WindowsHypr/WindowsHypr.module.scss
@@ -87,6 +87,7 @@
     padding: 3px 10px;
     // height: 130px;
     flex-wrap: wrap;
+    z-index: 50;
     // width: 130px;
     li {
       display: flex;
